# agentic-rag

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: manifest.json
scripts/: build_chunks.py  check.sh  fetch_corpus.py  ingest.py  search.py
src/rag/: config.py  logging.py  main.py
src/rag/embed/: base.py  fake.py  openai_embedder.py
src/rag/generate/: answer.py  gateway_client.py
src/rag/ingest/: chunk.py  fetch.py  models.py  parse.py
src/rag/store/: base.py  lancedb_store.py
tests/: conftest.py  test_chunk.py  test_embed.py  test_fetch.py  test_generate.py  test_health.py  test_parse.py  test_store.py
tests/fixtures/: minimal_paper.html
