[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG over an arXiv ML papers corpus, with an evaluation-first design"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "feedparser>=6.0",
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "chonkie>=1.7.0",
    "tiktoken>=0.13.0",
    "selectolax>=0.4.10",
    "lancedb>=0.34.0",
    "openai>=2.45.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.9"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["network: tests that hit external services (deselected in CI)"]
addopts = "-m 'not network'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
